ABM usuario y login

--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,41 @@ paket-files/
 __pycache__/
 *.pyc
 .vscode/*
+/obj/Debug/net8.0
+/obj/Debug/net8.0
+obj/Debug/net8.0/apphost.exe
+obj/Debug/net8.0/staticwebassets.development.json
+obj/Debug/net8.0/staticwebassets.pack.json
+obj/Debug/net8.0/staticwebassets/msbuild.Tp-Inmobiliaria_Ledesma-Lillo.Net.Microsoft.AspNetCore.StaticWebAssets.props
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.AssemblyInfo.cs
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.AssemblyInfoInputs.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.assets.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.csproj.AssemblyReference.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.csproj.CoreCompileInputs.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.GeneratedMSBuildEditorConfig.editorconfig
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.genruntimeconfig.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.pdb
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.sourcelink.json
+obj/Debug/net8.0/staticwebassets.build.json
+obj/Debug/net8.0/staticwebassets.development.json
+obj/Debug/net8.0/staticwebassets.pack.json
+obj/Debug/net8.0/staticwebassets/msbuild.Tp-Inmobiliaria_Ledesma-Lillo.Net.Microsoft.AspNetCore.StaticWebAssets.props
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.AssemblyInfo.cs
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.AssemblyInfoInputs.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.assets.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.csproj.AssemblyReference.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.csproj.CoreCompileInputs.cache
+bin/Debug/net8.0/appsettings.json
+obj/Debug/net8.0/project.razor.vscode.bin
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.AssemblyInfo.cs
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.AssemblyInfoInputs.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.assets.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.csproj.AssemblyReference.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.GeneratedMSBuildEditorConfig.editorconfig
+obj/Debug/net8.0/project.razor.vscode.bin
+obj/Debug/net8.0/project.razor.vscode.bin
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.AssemblyInfo.cs
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.AssemblyInfoInputs.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.assets.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.csproj.AssemblyReference.cache
+obj/Debug/net8.0/Tp-Inmobiliaria_Ledesma-Lillo.Net.GeneratedMSBuildEditorConfig.editorconfig
