Inyecciones Faltan completar algunas
El connection string ya funciona pero faltan implementar algunas interfaces.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ledesmalillo;User=root;Password=;"
+
+  },
   "AllowedHosts": "*",
   "Salt": "SALADA"
 }
